--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "directories": {},
   "scripts": {
     "start": "jest --watchAll --no-cache",
-    "test": "jest --coverage",
+    "test": "jest",
+    "coverage": "jest --coverage",
+    "lint": "eslint --fix src test/unit/specs",
     "build": "webpack --config webpack.prod.js",
     "watch": "jest --watch",
     "dev": "webpack-dev-server --open --config webpack.dev.js"
@@ -26,6 +28,12 @@
     "babel-plugin-module-resolver": "^3.1.1",
     "babel-preset-env": "^1.7.0",
     "clean-webpack-plugin": "^0.1.19",
+    "eslint": "^5.8.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^8.0.0",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^23.6.0",
     "webpack": "^4.23.1",
