--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
 language: node_js
 node_js:
   - "9"
+install:
+  - npm install -g codecov
 script:
   - npm run lint
   - npm run test
 after_success:
-  - npm run coverage
+  - npm run codecov
