--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "hu-tool",
-  "version": "1.1.4",
+  "version": "1.2.0",
   "description": "good game tools, means final tool",
   "directories": {},
   "scripts": {
-    "start": "jest --watchAll --no-cache",
+    "dev": "jest --watchAll --no-cache",
     "unit": "jest --config test/unit/jest.conf.js --coverage",
     "test": "npm run unit",
     "lint": "eslint --fix src test/unit/specs",
     "build": "webpack --config webpack.prod.js",
     "watch": "jest --watch",
-    "dev": "webpack-dev-server --open --config webpack.dev.js",
+    "start": "webpack-dev-server --open --config webpack.dev.js",
     "commit": "npx git-cz"
   },
   "files": [
@@ -58,6 +58,7 @@
     "webpack-merge": "^4.1.4"
   },
   "dependencies": {
+    "is-type-of": "^1.2.1",
     "url-parse": "^1.4.3"
   },
   "main": "lib/hu-tool.js",
