feat: add index.d.ts

--- a/package.json
+++ b/package.json
@@ -69,5 +69,6 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
-  }
+  },
+  "typings": "types/index.d.ts"
 }
