feat: add analysis

--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "watch": "jest --watch",
     "start": "webpack-dev-server --open --config webpack.dev.js",
     "commit": "npx git-cz",
-    "pub": "sh autocm.sh"
+    "pub": "sh autocm.sh",
+    "generateAnalyzFile": "webpack --profile --json > stats.json",
+    "analyz": "npx webpack-bundle-analyzer --port 8888 ./stats.json"
   },
   "files": [
     "src",
@@ -56,6 +58,7 @@
     "jest": "^23.6.0",
     "terser-webpack-plugin": "^2.0.1",
     "webpack": "^4.23.1",
+    "webpack-bundle-analyzer": "^3.6.0",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10",
     "webpack-merge": "^4.1.4"
